Localisations support update

--- a/IPSX/Flows/Dashboard/Storyboard/ro-RO.lproj/TokenDeposit.strings
+++ b/IPSX/Flows/Dashboard/Storyboard/ro-RO.lproj/TokenDeposit.strings
@@ -5,6 +5,9 @@
 /* Class = "UIButton"; normalTitle = "Cancel Deposit"; ObjectID = "1Yd-z0-Q5W"; */
 "1Yd-z0-Q5W.normalTitle" = "Anulare depozit";
 
+/* Class = "UILabel"; text = "Invite your friends and earn 25 IPSX tokens for each friend that signs up and verifies their account."; ObjectID = "2ap-1X-Rwk"; */
+"2ap-1X-Rwk.text" = "Invită-ți prietenii și câștigă 25 IPSX pentru fiecare cont înregistrat și validat.";
+
 /* Class = "UILabel"; text = "EXPIRED"; ObjectID = "3nU-KK-ghk"; */
 "3nU-KK-ghk.text" = "EXPIRAT";
 
@@ -13,6 +16,9 @@
 
 /* Class = "UILabel"; text = "Account"; ObjectID = "6f4-jt-aKp"; */
 "6f4-jt-aKp.text" = "Cont";
+
+/* Class = "UILabel"; text = "Invite your friends and earn"; ObjectID = "741-0W-s8o"; */
+"741-0W-s8o.text" = "Inivtă-ți prietenii și câștigă";
 
 /* Class = "UIButton"; normalTitle = "Copy"; ObjectID = "7Jt-XL-lFM"; */
 "7Jt-XL-lFM.normalTitle" = "Copiere";
@@ -37,6 +43,9 @@
 
 /* Class = "UILabel"; text = "Invalid address"; ObjectID = "F8T-LM-5Kz"; */
 "F8T-LM-5Kz.text" = "Adresa invalidă";
+
+/* Class = "UILabel"; text = "Refer a Friend"; ObjectID = "HGU-7M-CQ1"; */
+"HGU-7M-CQ1.text" = "Recomandă-i unui prieten";
 
 /* Class = "UILabel"; text = "Tap on the Create Deposit to prepare a token transfer form your ethereum wallet to the application account."; ObjectID = "Hxu-2P-TNQ"; */
 "Hxu-2P-TNQ.text" = "Apăsați Creare Depozit pentru a pregati un transfer din adresa dumneavoastră către aplicația IPSX.";
@@ -65,6 +74,9 @@
 /* Class = "UILabel"; text = "Deposit Details"; ObjectID = "TDV-x9-NMN"; */
 "TDV-x9-NMN.text" = "Detalii depozit";
 
+/* Class = "UILabel"; text = "Invite your friends and earn 25 IPSX"; ObjectID = "TyJ-Uc-DYZ"; */
+"TyJ-Uc-DYZ.text" = "Invită-ți prietenii și câștigă 25 IPSX";
+
 /* Class = "UILabel"; text = "Amount"; ObjectID = "V6O-bS-LAV"; */
 "V6O-bS-LAV.text" = "Suma";
 
@@ -80,8 +92,14 @@
 /* Class = "UILabel"; text = "50 IPSX"; ObjectID = "ZIL-eL-xXU"; */
 "ZIL-eL-xXU.text" = "50 IPSX";
 
+/* Class = "UIButton"; normalTitle = "Frequently Asked Questions"; ObjectID = "aPW-EA-dLK"; */
+"aPW-EA-dLK.normalTitle" = "Întrebări frecvente";
+
 /* Class = "UILabel"; text = "60 min"; ObjectID = "abH-yy-yKF"; */
 "abH-yy-yKF.text" = "60 min";
+
+/* Class = "UIButton"; normalTitle = "Copy Link"; ObjectID = "aqV-Pb-dbr"; */
+"aqV-Pb-dbr.normalTitle" = "Copiază Link";
 
 /* Class = "UILabel"; text = "Details"; ObjectID = "c1L-Sv-AP0"; */
 "c1L-Sv-AP0.text" = "Detalii";
@@ -125,8 +143,14 @@
 /* Class = "UILabel"; text = "0x004bcce2282eaff78610ec28d3b86d7ab51c6e21"; ObjectID = "w4i-0D-m72"; */
 "w4i-0D-m72.text" = "0x004bcce2282eaff78610ec28d3b86d7ab51c6e21";
 
+/* Class = "UILabel"; text = "Refer a Friend"; ObjectID = "wPN-3Y-Gls"; */
+"wPN-3Y-Gls.text" = "Recomanda-i unui prieten";
+
 /* Class = "UIButton"; normalTitle = "Submit"; ObjectID = "xCh-8N-oqj"; */
 "xCh-8N-oqj.normalTitle" = "Trimite";
 
 /* Class = "UILabel"; text = "COMPLETED"; ObjectID = "yHf-mo-xde"; */
 "yHf-mo-xde.text" = "COMPLET";
+
+/* Class = "UILabel"; text = "No referal link available"; ObjectID = "zIf-SZ-53r"; */
+"zIf-SZ-53r.text" = "Link indisponibil";
