--- a/IPSX/Flows/Dashboard/Storyboard/ro-RO.lproj/TokenRequest.strings
+++ b/IPSX/Flows/Dashboard/Storyboard/ro-RO.lproj/TokenRequest.strings
@@ -1,12 +1,21 @@
 
 /* Class = "UILabel"; text = "Create Token Request"; ObjectID = "1s5-7n-nPX"; */
-"1s5-7n-nPX.text" = "Creare cerere";
+"1s5-7n-nPX.text" = "Crează cerere";
+
+/* Class = "UILabel"; text = "Start with @, 5-32 length, A-z, 0-9 and underscores"; ObjectID = "5BW-hi-BxM"; */
+"5BW-hi-BxM.text" = "Înceepe cu @, 5-32 lungime, A-z, 0-9 și underscore";
 
 /* Class = "UILabel"; text = "Token Request"; ObjectID = "6T2-NX-UlG"; */
 "6T2-NX-UlG.text" = "Cerere tokeni";
 
 /* Class = "UILabel"; text = "PENDING"; ObjectID = "8Ov-SW-jhQ"; */
 "8Ov-SW-jhQ.text" = "ÎN AȘTEPTARE";
+
+/* Class = "UILabel"; text = "Telegram"; ObjectID = "9xC-ja-nCx"; */
+"9xC-ja-nCx.text" = "Telegram";
+
+/* Class = "UIButton"; normalTitle = "Done"; ObjectID = "CLb-Gw-wqW"; */
+"CLb-Gw-wqW.normalTitle" = "Gata";
 
 /* Class = "UILabel"; text = "Amount"; ObjectID = "ELg-5q-u5r"; */
 "ELg-5q-u5r.text" = "Suma";
@@ -22,6 +31,9 @@
 
 /* Class = "UILabel"; text = "Address from CryptoWallet"; ObjectID = "ZLo-2v-P8T"; */
 "ZLo-2v-P8T.text" = "Adresa din wallet";
+
+/* Class = "UITextField"; placeholder = "@username"; ObjectID = "Zmb-sg-Rgi"; */
+"Zmb-sg-Rgi.placeholder" = "@nume";
 
 /* Class = "UIButton"; normalTitle = "Submit"; ObjectID = "d9Q-qH-E1n"; */
 "d9Q-qH-E1n.normalTitle" = "Trimite";
@@ -40,6 +52,9 @@
 
 /* Class = "UILabel"; text = "13 Apr 2018   08:22"; ObjectID = "rOV-Bg-xi1"; */
 "rOV-Bg-xi1.text" = "13 Apr 2018   08:22";
+
+/* Class = "UILabel"; text = "Because our goal is to grow our community, please provide us your Telegram ID"; ObjectID = "rhw-Cw-i8r"; */
+"rhw-Cw-i8r.text" = "Pentru ca ne dorim o comunitate numeroasă, indroduceți ID-ul Telegram";
 
 /* Class = "UILabel"; text = "Address from CryptoWallet"; ObjectID = "sp2-7b-yzb"; */
 "sp2-7b-yzb.text" = "Adresa din wallet";
