--- a/IPSX/Flows/EnrolStaking/Storyboard/ro-RO.lproj/EnrolStaking.strings
+++ b/IPSX/Flows/EnrolStaking/Storyboard/ro-RO.lproj/EnrolStaking.strings
@@ -38,11 +38,17 @@
 /* Class = "UIButton"; normalTitle = "Continue"; ObjectID = "YKu-qh-qq9"; */
 "YKu-qh-qq9.normalTitle" = "Continuă";
 
+/* Class = "UILabel"; text = "0x000752563f7d0c7cE8edc761Bb7281957Df530EC"; ObjectID = "bEx-ys-lZu"; */
+"bEx-ys-lZu.text" = "0x000752563f7d0c7cE8edc761Bb7281957Df530EC";
+
 /* Class = "UILabel"; text = "We will transfer the tokens in this address."; ObjectID = "dG4-eo-QCH"; */
 "dG4-eo-QCH.text" = "Vom transfera tokenii către această adresă.";
 
 /* Class = "UILabel"; text = "Enrolling in the IPSX Staking Program will grant a 5% reward of the amount of staked IPSX tokens, provided that all conditions are meet for the entire duration of the program (3 months). "; ObjectID = "hHE-Rg-YPM"; */
 "hHE-Rg-YPM.text" = "Înrolarea în programul de staking asigură o recompensă de 5%, dacă conditiile sunt îndeplinite pe durata programului (3 luni).";
+
+/* Class = "UILabel"; text = "Address from CryptoWallet"; ObjectID = "j3F-Bp-7pb"; */
+"j3F-Bp-7pb.text" = "Address from CryptoWallet";
 
 /* Class = "UILabel"; text = "Staking Program"; ObjectID = "jgQ-56-GZj"; */
 "jgQ-56-GZj.text" = "Program Staking";
@@ -55,6 +61,9 @@
 
 /* Class = "UILabel"; text = "Select Ethereum Address"; ObjectID = "nPV-x2-NkY"; */
 "nPV-x2-NkY.text" = "Alegeți adresa ETH";
+
+/* Class = "UIButton"; normalTitle = "Edit"; ObjectID = "oXX-WC-jci"; */
+"oXX-WC-jci.normalTitle" = "Editare";
 
 /* Class = "UILabel"; text = "Details"; ObjectID = "sui-iP-z1h"; */
 "sui-iP-z1h.text" = "Detalii";
