--- a/IPSX/Flows/EnrolTesting/Storyboard/ro-RO.lproj/EnrolTesting.strings
+++ b/IPSX/Flows/EnrolTesting/Storyboard/ro-RO.lproj/EnrolTesting.strings
@@ -1,7 +1,4 @@
 
-/* Class = "UILabel"; text = "Please make sure that you provide an Ethereum Mainnet valid ETH address that is NOT from an exchange and for which you are in control of its private key."; ObjectID = "2yC-ft-jQC"; */
-"2yC-ft-jQC.text" = "Asigurați-vă ca dețineți cheia privata ETH. Nu folosiți adrese de pe exchanges.";
-
 /* Class = "UILabel"; text = "Address from CryptoWallet"; ObjectID = "4wC-12-jNu"; */
 "4wC-12-jNu.text" = "Addresa din CryptoWallet";
 
@@ -14,8 +11,8 @@
 /* Class = "UILabel"; text = "No valid address matched"; ObjectID = "AoX-bW-M97"; */
 "AoX-bW-M97.text" = "Nicio adresă validă";
 
-/* Class = "UILabel"; text = "Every person that enrolls for the testing program will receive 250 IPSX. "; ObjectID = "DiP-I3-UtB"; */
-"DiP-I3-UtB.text" = "Fiecare persoană înscrisă in programul de testing va primi 250 IPSX. ";
+/* Class = "UILabel"; text = "You will receive 250 ISPX tokens."; ObjectID = "DiP-I3-UtB"; */
+"DiP-I3-UtB.text" = "Veți primi 250 tokeni ISPX.";
 
 /* Class = "UILabel"; text = "Testing Program"; ObjectID = "FS8-yl-YRD"; */
 "FS8-yl-YRD.text" = "Program Testing";
@@ -54,7 +51,7 @@
 "mA2-tw-6mY.text" = "20 Apr 2018";
 
 /* Class = "UILabel"; text = "Details"; ObjectID = "olH-hR-6PL"; */
-"olH-hR-6PL.text" = "Detalii";
+"olH-hR-6PL.text" = "Details";
 
 /* Class = "UILabel"; text = "12:00"; ObjectID = "sgT-xq-RXg"; */
 "sgT-xq-RXg.text" = "12:00";
