--- a/IPSX/Flows/Login/Storyboard/ro-RO.lproj/Login.strings
+++ b/IPSX/Flows/Login/Storyboard/ro-RO.lproj/Login.strings
@@ -1,6 +1,6 @@
 
-/* Class = "UILabel"; text = "At least 8 characters, one number, one uppercase character and one special character @$!%*?&"; ObjectID = "2sI-kK-0XQ"; */
-"2sI-kK-0XQ.text" = "Cel puțin 8 litere, un număr, o literă de tipar și un caracter special @$!%*?&";
+/* Class = "UILabel"; text = "At least 2 characters"; ObjectID = "2sI-kK-0XQ"; */
+"2sI-kK-0XQ.text" = "Cel puțin 2 caractere";
 
 /* Class = "UIButton"; normalTitle = "Send Password Reset Link"; ObjectID = "4Ac-vC-zkK"; */
 "4Ac-vC-zkK.normalTitle" = "Trimite link pentru resetarea parolei";
@@ -54,7 +54,7 @@
 "xWE-ka-htc.text" = "Logare";
 
 /* Class = "UITextField"; placeholder = "Type your password"; ObjectID = "zUh-KK-FGF"; */
-"zUh-KK-FGF.placeholder" = "Intriduceți parola";
+"zUh-KK-FGF.placeholder" = "Introduceți parola";
 
 /* Class = "UILabel"; text = "Password"; ObjectID = "zmM-MY-DzF"; */
 "zmM-MY-DzF.text" = "Parola";
