--- a/IPSX/Flows/New Proxy/Storyboard/ro-RO.lproj/NewProxy.strings
+++ b/IPSX/Flows/New Proxy/Storyboard/ro-RO.lproj/NewProxy.strings
@@ -86,6 +86,9 @@
 /* Class = "UILabel"; text = "Paste PAC link"; ObjectID = "g4n-2g-2Zy"; */
 "g4n-2g-2Zy.text" = "Lipește PAC link";
 
+/* Class = "UILabel"; text = "The proxy will be locked on your current IP address: X.X.X.X"; ObjectID = "ki6-Oi-tE9"; */
+"ki6-Oi-tE9.text" = "Proxiul va fi blocat pe această adresă IP: X.X.X.X";
+
 /* Class = "UIButton"; normalTitle = "Open Settings"; ObjectID = "pcO-ip-5VU"; */
 "pcO-ip-5VU.normalTitle" = "Deschide setările";
 
