--- a/IPSX/Flows/Register/Storyboard/ro-RO.lproj/WalletAdd.strings
+++ b/IPSX/Flows/Register/Storyboard/ro-RO.lproj/WalletAdd.strings
@@ -5,8 +5,8 @@
 /* Class = "UITextField"; placeholder = "0x..."; ObjectID = "1hb-NR-qjl"; */
 "1hb-NR-qjl.placeholder" = "0x...";
 
-/* Class = "UILabel"; text = "The email must be a valid address."; ObjectID = "2uE-0w-tHg"; */
-"2uE-0w-tHg.text" = "Adresa de email trebuie să fie validă";
+/* Class = "UILabel"; text = "Invalid name"; ObjectID = "2uE-0w-tHg"; */
+"2uE-0w-tHg.text" = "Nume invalid";
 
 /* Class = "UILabel"; text = "Add your ETH address"; ObjectID = "8TY-S3-kmq"; */
 "8TY-S3-kmq.text" = "Adaugă addresa ETH";
@@ -23,8 +23,11 @@
 /* Class = "UILabel"; text = "ETH address"; ObjectID = "Jti-4E-z8Y"; */
 "Jti-4E-z8Y.text" = "Adresa ETH";
 
-/* Class = "UITextField"; placeholder = "Address from CryptoWallet"; ObjectID = "LLI-a3-MNy"; */
-"LLI-a3-MNy.placeholder" = "Adresa din wallet";
+/* Class = "UIButton"; normalTitle = "   Copy"; ObjectID = "KUD-pU-Kal"; */
+"KUD-pU-Kal.normalTitle" = "   Copiază";
+
+/* Class = "UITextField"; placeholder = "e.g. My first wallet"; ObjectID = "LLI-a3-MNy"; */
+"LLI-a3-MNy.placeholder" = "e.g. Walletul meu";
 
 /* Class = "UIButton"; normalTitle = "   QR Code"; ObjectID = "La0-Dw-ufx"; */
 "La0-Dw-ufx.normalTitle" = "   Cod QR";
