--- a/IPSX/Storyboard/ro-RO.lproj/Main.strings
+++ b/IPSX/Storyboard/ro-RO.lproj/Main.strings
@@ -8,11 +8,17 @@
 /* Class = "UILabel"; text = "＋"; ObjectID = "2mG-ff-fot"; */
 "2mG-ff-fot.text" = "＋";
 
+/* Class = "UILabel"; text = "You have to confirm this action with your account password."; ObjectID = "42h-Xt-MeB"; */
+"42h-Xt-MeB.text" = "Introduceți parola pentru confirmare.";
+
 /* Class = "UIViewController"; title = "Dashboard"; ObjectID = "4A6-HS-yFF"; */
 "4A6-HS-yFF.title" = "Bord";
 
 /* Class = "UILabel"; text = "100 MB"; ObjectID = "5D6-ZX-t6t"; */
 "5D6-ZX-t6t.text" = "100 MB";
+
+/* Class = "UILabel"; text = "Account Password"; ObjectID = "6WW-CN-ZzN"; */
+"6WW-CN-ZzN.text" = "Parola contului";
 
 /* Class = "UIViewController"; title = "New Proxy"; ObjectID = "6jc-WL-DqT"; */
 "6jc-WL-DqT.title" = "Proxy nou";
@@ -20,11 +26,20 @@
 /* Class = "UILabel"; text = "Your Profile"; ObjectID = "7cd-o2-HyC"; */
 "7cd-o2-HyC.text" = "Profilul dumneavoastră";
 
+/* Class = "UILabel"; text = "Create Token Deposit"; ObjectID = "7z1-KK-S1y"; */
+"7z1-KK-S1y.text" = "Creare depozit token";
+
 /* Class = "UILabel"; text = "50 IPSX"; ObjectID = "8fJ-fX-9XP"; */
 "8fJ-fX-9XP.text" = "50 IPSX";
 
 /* Class = "UITabBarItem"; title = "New Proxy"; ObjectID = "B73-W5-OlS"; */
 "B73-W5-OlS.title" = "Proxy nou";
+
+/* Class = "UILabel"; text = "At least 8 characters, one number, one uppercase character and one special character @$!%*?&"; ObjectID = "D2c-aM-PUz"; */
+"D2c-aM-PUz.text" = "Cel puțin 8 caractere, un număr, o majusculă și un caracter special @$!%*?&";
+
+/* Class = "UILabel"; text = "The proxy will be locked on your current IP address: X.X.X.X"; ObjectID = "DbF-bo-8QL"; */
+"DbF-bo-8QL.text" = "Proxiul va fi blocat pe această adresa IP: X.X.X.X";
 
 /* Class = "UILabel"; text = "Edit Profile"; ObjectID = "FE3-qZ-pic"; */
 "FE3-qZ-pic.text" = "Editare profil";
@@ -35,11 +50,17 @@
 /* Class = "UILabel"; text = "Not yet summited"; ObjectID = "IIN-Jf-7yz"; */
 "IIN-Jf-7yz.text" = "Netrimis";
 
+/* Class = "UILabel"; text = "Newsletter"; ObjectID = "JSM-ST-ToC"; */
+"JSM-ST-ToC.text" = "Anunțuri";
+
 /* Class = "UILabel"; text = "5% reward of the amount of staked IPSX"; ObjectID = "Jya-kR-rBZ"; */
 "Jya-kR-rBZ.text" = "5% bonus din suma IPSX depozitată";
 
 /* Class = "UILabel"; text = "You will receive 250 IPSX"; ObjectID = "K4t-QB-LSM"; */
 "K4t-QB-LSM.text" = "Vei primi 250 IPSX";
+
+/* Class = "UILabel"; text = "Delete account procedure"; ObjectID = "KIf-g0-G67"; */
+"KIf-g0-G67.text" = "Procedură ștergere cont";
 
 /* Class = "UILabel"; text = "5000"; ObjectID = "KPJ-tJ-xHh"; */
 "KPJ-tJ-xHh.text" = "5000";
@@ -56,11 +77,11 @@
 /* Class = "UILabel"; text = "Your Ethereum Address"; ObjectID = "OuC-Ih-saw"; */
 "OuC-Ih-saw.text" = "Adresa ta Ethereum";
 
-/* Class = "UISegmentedControl"; PSQ-5O-SSB.segmentTitles[0] = "Available"; ObjectID = "PSQ-5O-SSB"; */
-"PSQ-5O-SSB.segmentTitles[0]" = "Disponibile";
+/* Class = "UISegmentedControl"; PSQ-5O-SSB.segmentTitles[0] = "Active"; ObjectID = "PSQ-5O-SSB"; */
+"PSQ-5O-SSB.segmentTitles[0]" = "Activ";
 
-/* Class = "UISegmentedControl"; PSQ-5O-SSB.segmentTitles[1] = "Expired"; ObjectID = "PSQ-5O-SSB"; */
-"PSQ-5O-SSB.segmentTitles[1]" = "Expirate";
+/* Class = "UISegmentedControl"; PSQ-5O-SSB.segmentTitles[1] = "Inactive"; ObjectID = "PSQ-5O-SSB"; */
+"PSQ-5O-SSB.segmentTitles[1]" = "Inactiv";
 
 /* Class = "UILabel"; text = "Enroll for Testing"; ObjectID = "PX4-pp-Lql"; */
 "PX4-pp-Lql.text" = "Înregistrare pentru testare";
@@ -68,8 +89,14 @@
 /* Class = "UILabel"; text = "Proof of ID"; ObjectID = "RK6-aX-7IY"; */
 "RK6-aX-7IY.text" = "Dovada ID";
 
+/* Class = "UILabel"; text = "Delete Account"; ObjectID = "S49-M8-bOY"; */
+"S49-M8-bOY.text" = "Șterge cont";
+
 /* Class = "UILabel"; text = "New Proxy"; ObjectID = "U7c-3L-4rb"; */
 "U7c-3L-4rb.text" = "Proxy nou";
+
+/* Class = "UIButton"; normalTitle = "Delete"; ObjectID = "VEy-im-QSO"; */
+"VEy-im-QSO.normalTitle" = "Șterge";
 
 /* Class = "UILabel"; text = "Request Test Token"; ObjectID = "Vug-mV-6KX"; */
 "Vug-mV-6KX.text" = "Cerere tokeni de test";
@@ -83,6 +110,9 @@
 /* Class = "UILabel"; text = "Basic User"; ObjectID = "YqW-LY-nCJ"; */
 "YqW-LY-nCJ.text" = "Utilizator Standard";
 
+/* Class = "UILabel"; text = "＋"; ObjectID = "Znh-Fz-vlP"; */
+"Znh-Fz-vlP.text" = "＋";
+
 /* Class = "UITabBarItem"; title = "Profile"; ObjectID = "Zvj-xy-99V"; */
 "Zvj-xy-99V.title" = "Profil";
 
@@ -92,14 +122,17 @@
 /* Class = "UILabel"; text = "Loading, please wait..."; ObjectID = "aK4-hy-ybg"; */
 "aK4-hy-ybg.text" = "Încarcă, așteptați vă rog...";
 
+/* Class = "UILabel"; text = "Delete Account"; ObjectID = "bdW-4P-6m1"; */
+"bdW-4P-6m1.text" = "Ștergere cont";
+
 /* Class = "UILabel"; text = "Enroll for Staking"; ObjectID = "chU-zn-PyY"; */
 "chU-zn-PyY.text" = "Inregistrare pentru depozit";
 
 /* Class = "UILabel"; text = "Email Notifications"; ObjectID = "d3q-rP-xQL"; */
 "d3q-rP-xQL.text" = "Notificări pe email";
 
-/* Class = "UILabel"; text = "5000"; ObjectID = "e3Q-X6-BW7"; */
-"e3Q-X6-BW7.text" = "5000";
+/* Class = "UILabel"; text = "0"; ObjectID = "e3Q-X6-BW7"; */
+"e3Q-X6-BW7.text" = "0";
 
 /* Class = "UIViewController"; title = "Settings"; ObjectID = "f0C-Rr-AGY"; */
 "f0C-Rr-AGY.title" = "Setări";
@@ -127,3 +160,6 @@
 
 /* Class = "UILabel"; text = "Profile info, Password"; ObjectID = "vuc-SG-6S1"; */
 "vuc-SG-6S1.text" = "Info profil, parola";
+
+/* Class = "UITextField"; placeholder = "Type your password"; ObjectID = "y2E-pu-hfE"; */
+"y2E-pu-hfE.placeholder" = "Introduceți parola";
