--- a/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
@@ -45,7 +45,7 @@
 "No Cammera Message Alert" = "Permiteți aplicației sa folosească camera dispozitivului.";
 "OK" = "OK";
 "Connect to the internet message" = "Conectați-vă la internet pentru a continua!";
-"Loading message" = "Îcarcă, așteptați...";
+"Loading message" = "Încarcă, așteptați...";
 "Facebook Login Error Message" = "Eroare conectare cu Facebook. Mai incercați odată!";
 "User already registered Error Message" = "Utilizatorul este deja înregistrat. Mergeți la Login";
 "User Not Registered Error Message" = "Utilizatorul nu este inregistrat cu Facebook";
