--- a/IPSX/Flows/Register/Storyboard/ro-RO.lproj/Register.strings
+++ b/IPSX/Flows/Register/Storyboard/ro-RO.lproj/Register.strings
@@ -2,8 +2,8 @@
 /* Class = "UIButton"; normalTitle = "Continue"; ObjectID = "4oS-F8-qwt"; */
 "4oS-F8-qwt.normalTitle" = "Continuă";
 
-/* Class = "UIButton"; selectedTitle = "ReadWP"; ObjectID = "5ax-2O-DpZ"; */
-"5ax-2O-DpZ.selectedTitle" = "CiteșteWP";
+/* Class = "UILabel"; text = "Subscribe to our mailing list to receive important IPSX updates"; ObjectID = "4xW-Wg-bpA"; */
+"4xW-Wg-bpA.text" = "Subscribe to our mailing list to receive important IPSX updates";
 
 /* Class = "UIButton"; normalTitle = "Close"; ObjectID = "626-p6-04Z"; */
 "626-p6-04Z.normalTitle" = "Închide";
@@ -23,20 +23,14 @@
 /* Class = "UILabel"; text = "Password"; ObjectID = "HFA-cl-gBD"; */
 "HFA-cl-gBD.text" = "Parola";
 
-/* Class = "UILabel"; text = "White list Registration"; ObjectID = "OlJ-gJ-q0K"; */
-"OlJ-gJ-q0K.text" = "Înregistrare whitelist";
+/* Class = "UILabel"; text = "Account Registration"; ObjectID = "OlJ-gJ-q0K"; */
+"OlJ-gJ-q0K.text" = "Înregistrare cont;
 
-/* Class = "UILabel"; text = "Pick the registration method you prefer (email or facebook)"; ObjectID = "WcS-Hq-YXV"; */
-"WcS-Hq-YXV.text" = "Alege metoda preferată de înregistrare (email sau facebook)";
+/* Class = "UILabel"; text = "Join IPSX now."; ObjectID = "WcS-Hq-YXV"; */
+"WcS-Hq-YXV.text" = "Alăturați-vă IPSX acum.";
 
 /* Class = "UILabel"; text = "Your account was successfully created! Check your email address to validate it and automatically be logged in."; ObjectID = "aFC-Z9-Pxo"; */
 "aFC-Z9-Pxo.text" = "Contul a fost creat cu succes! Verificați-vă emailul pentru validare și reveniți în aplicație.";
-
-/* Class = "UIButton"; selectedTitle = "ConfirmNonUS"; ObjectID = "b92-1b-Uo3"; */
-"b92-1b-Uo3.selectedTitle" = "ConfirmNonUS";
-
-/* Class = "UIButton"; selectedTitle = "UnderstandRisk"; ObjectID = "evG-EO-NtR"; */
-"evG-EO-NtR.selectedTitle" = "UnderstandRisk";
 
 /* Class = "UITextField"; placeholder = "Retype your password"; ObjectID = "f03-6l-DM5"; */
 "f03-6l-DM5.placeholder" = "Reintroduceți parola";
@@ -56,17 +50,20 @@
 /* Class = "UITextField"; placeholder = "Type a valid email address"; ObjectID = "jhZ-6S-3Y3"; */
 "jhZ-6S-3Y3.placeholder" = "Introduceți o adresă validă de email";
 
-/* Class = "UIButton"; normalTitle = "Register with Facebook"; ObjectID = "rbU-NO-i18"; */
-"rbU-NO-i18.normalTitle" = "Înregistrare cu Facebook";
+/* Class = "UIButton"; selectedTitle = "UnderstandRisk"; ObjectID = "n8t-oW-Gir"; */
+"n8t-oW-Gir.selectedTitle" = "Riscuri";
+
+/* Class = "UIButton"; normalTitle = "Continue with Facebook"; ObjectID = "rbU-NO-i18"; */
+"rbU-NO-i18.normalTitle" = "Continuă cu Facebook";
 
 /* Class = "UITextField"; placeholder = "Type your password"; ObjectID = "snQ-lA-6jD"; */
 "snQ-lA-6jD.placeholder" = "Introduceți parola";
 
-/* Class = "UIButton"; selectedTitle = "AgreeTerms"; ObjectID = "wvU-me-LDY"; */
-"wvU-me-LDY.selectedTitle" = "AgreeTerms";
+/* Class = "UIButton"; normalTitle = "Agreement"; ObjectID = "wvU-me-LDY"; */
+"wvU-me-LDY.normalTitle" = "Agrează";
 
-/* Class = "UIButton"; normalTitle = "Register with Email"; ObjectID = "yN7-LQ-cC1"; */
-"yN7-LQ-cC1.normalTitle" = "Înregistrare cu email";
+/* Class = "UIButton"; normalTitle = "Continue with Email"; ObjectID = "yN7-LQ-cC1"; */
+"yN7-LQ-cC1.normalTitle" = "Continuă cu Email";
 
 /* Class = "UIButton"; normalTitle = "Register"; ObjectID = "zJr-kv-cZI"; */
 "zJr-kv-cZI.normalTitle" = "Înregistrare";
