--- a/IPSX/Storyboard/ro-RO.lproj/Landing.strings
+++ b/IPSX/Storyboard/ro-RO.lproj/Landing.strings
@@ -1,5 +1,5 @@
 
-/* Class = "UILabel"; text = "Token sale hard cap 10,800 Ether. \nAccepted currency: ether"; ObjectID = "gHa-Hj-Pph"; */
+/* Class = "UILabel"; text = "Welcome to"; ObjectID = "gHa-Hj-Pph"; */
 "gHa-Hj-Pph.text" = "Bine ați venit la";
 
 /* Class = "UIButton"; normalTitle = "Register"; ObjectID = "kCB-he-W31"; */
