Validate the certificate upload state

--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -84,6 +84,7 @@
 "Go to Settings" = "Go to Settings";
 "ETH Address Copied Message" = "The ETH address has been copied to clipboard";
 "Proxy Contries Fetch Error Message" = "We couldn't update the countries list, the cached countries will be displayed.";
+"Missing Certificate Message" = "Please upload the incorporation certificate to continue";
 
 //Kyc Status
 "Unknown Status Text"    = "Unknown";
