--- a/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
@@ -84,6 +84,7 @@
 "Go to Settings" = "Setări";
 "ETH Address Copied Message" = "Adresa ETH a fost copiata in clipboard";
 "Proxy Contries Fetch Error Message" = "Nu am reușit sa actualizăm lista țărilor disponibile, se va folosi lista precedentă.";
+"Missing Certificate Message" = "Vă rugăm încărcați certificatul.";
 
 //Kyc Status
 "Unknown Status Text"    = "Necunoscut";
