Update implementation (still need that API request to get company :((

--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -85,6 +85,7 @@
 "ETH Address Copied Message" = "The ETH address has been copied to clipboard";
 "Proxy Contries Fetch Error Message" = "We couldn't update the countries list, the cached countries will be displayed.";
 "Missing Certificate Message" = "Please upload the incorporation certificate to continue";
+"Get Company Details Error Message" = "Company details not available at the moment. Please try again later.";
 
 //Kyc Status
 "Unknown Status Text"    = "Unknown";
