--- a/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
@@ -49,7 +49,7 @@
 "Facebook Login Error Message" = "Eroare conectare cu Facebook. Mai incercați odată!";
 "User already registered Error Message" = "Utilizatorul este deja înregistrat. Mergeți la Login";
 "User Not Registered Error Message" = "Utilizatorul nu este inregistrat cu Facebook";
-"Enroll for Testing Title" = "înrolare Testing";
+"Enroll for Testing Title" = "Înrolare Testing";
 "Enroll for Staking Title" = "Înrolare Staking";
 "Enrolled for Testing Title" = "Înrolat pentru Testing";
 "Enrolled for Staking Title" = "Înrolat pentru Staking";
@@ -85,6 +85,7 @@
 "ETH Address Copied Message" = "Adresa ETH a fost copiata in clipboard";
 "Proxy Contries Fetch Error Message" = "Nu am reușit sa actualizăm lista țărilor disponibile, se va folosi lista precedentă.";
 "Missing Certificate Message" = "Vă rugăm încărcați certificatul.";
+"Get Company Details Error Message" = "Detaliile companiei nu sunt disponibile. Încercați din nou mai târziu.";
 
 //Kyc Status
 "Unknown Status Text"    = "Necunoscut";
