Update edit profile with corporate error handling

--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -86,6 +86,11 @@
 "Proxy Contries Fetch Error Message" = "We couldn't update the countries list, the cached countries will be displayed.";
 "Missing Certificate Message" = "Please upload the incorporation certificate to continue";
 "Get Company Details Error Message" = "Company details not available at the moment. Please try again later.";
+"Legal To Individual Downgrade Forbiden Message." = "This change is not possible at the moment.";
+"Add corporate details toast message" = "Please add corporate details";
+"Add Company Alert Title" = "Missing corporate details";
+"Add Company Alert Body" = "Tap on Add to register your company!";
+"Add" = "Add";
 
 //Kyc Status
 "Unknown Status Text"    = "Unknown";
