Prevent the user to request or deposit tokens if the company is under review

--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -91,6 +91,7 @@
 "Add Company Alert Title" = "Missing corporate details";
 "Add Company Alert Body" = "Tap on Add to register your company!";
 "Add" = "Add";
+"Company Not Validated Message" = "Please wait for your company to get validated before acquiring tokens";
 
 //Kyc Status
 "Unknown Status Text"    = "Unknown";
