--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -102,3 +102,17 @@
 "Rejected Status Text"   = "Rejected";
 "Accepted Status Text"   = "Accepted";
 
+//Provider texts
+"Ready to become a Provider" = "Ready to become a Provider";
+"About you as Provider" = "About you as Provider";
+"Provider Not Submitted Text" = "You will need to follow a few more steps";
+"Provider Pending Text" = "Your petition is being reviewed";
+"Provider Resubmitted Text" = "Your petition is being reviewed (resubmited)";
+"Provider Approved Text" = "Your petition has been approved";
+"Provider Rejected Text" = "Your petition has been rejected";
+"Provider Canceled Text" = "Your petition has been canceled";
+"Provider Incomplete Text" = "You petition has incomplete data";
+
+
+
+
