--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -92,6 +92,8 @@
 "Add Company Alert Body" = "Tap on Add to register your company!";
 "Add" = "Add";
 "Company Not Validated Message" = "Please wait for your company to get validated before acquiring tokens";
+"Delete Account Confirm Message" = "Are you sure you want to delete this account?";
+"Confirm" = "Confirm";
 
 //Kyc Status
 "Unknown Status Text"    = "Unknown";
