--- a/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
@@ -91,6 +91,9 @@
 "Add Company Alert Title" = "Detaliile companiei lipsesc";
 "Add Company Alert Body" = "Apăsați adaugă pentru a introduce datele lipsă";
 "Add" = "Adaugă";
+"Company Not Validated Message" = "Așteptatți vă rog validarea companiei";
+"Delete Account Confirm Message" = "Sigur doriți să ștergeți cpntul?";
+"Confirm" = "Confirmă";
 
 //Kyc Status
 "Unknown Status Text"    = "Necunoscut";
