fix strings file

--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -117,7 +117,7 @@
 "Your Job as Provider" = "Your Job as Provider";
 "Providers Dashboard" = "Providers Dashboard?";
 "Package Builder" = "Package Builder?";
-"Your Job as Provider Text" = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque in consectetur nunc. Aenean eu convallis eros, a semper felis. Duis eget eros vel tortor lobortis convallis at sed ante. Aliquam eget risus nibh."
+"Your Job as Provider Text" = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque in consectetur nunc. Aenean eu convallis eros, a semper felis. Duis eget eros vel tortor lobortis convallis at sed ante. Aliquam eget risus nibh.";
 "Providers Dashboard Text" = "Mauris nec placerat massa. Nunc sed ante vitae urna faucibus congue id id ex. Pellentesque eu elit ac est bibendum sagittis. Lorem ipsum dolor sit amet, consectetur adipiscing elit.";
 "Package Builder Text" = "Mauris nec placerat massa. Nunc sed ante vitae urna faucibus congue id id ex. Pellentesque eu elit ac est bibendum sagittis. Lorem ipsum dolor sit amet, consectetur adipiscing elit.";
 
