Implement Fb error handling for accounts without email address + pod update

--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -48,6 +48,7 @@
 "Loading message" = "Loading, please wait...";
 "Facebook Login Error Message" = "Facebook Login Error. Please try again!";
 "User already registered Error Message" = "This user is already registered. Please go to Login";
+"Facebook Register No Email Error" = "Please add an email address to your Facebook account to continue";
 "User Not Registered Error Message" = "This user has not registered with Facebook";
 "Enroll for Testing Title" = "Enroll for Testing";
 "Enroll for Staking Title" = "Enroll for Staking";
