--- a/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
@@ -48,6 +48,7 @@
 "Loading message" = "Încarcă, așteptați...";
 "Facebook Login Error Message" = "Eroare conectare cu Facebook. Mai incercați odată!";
 "User already registered Error Message" = "Utilizatorul este deja înregistrat. Mergeți la Login";
+"Facebook Register No Email Error" = "Vă rog să asociați o adresă de email cu contul de Facebook";
 "User Not Registered Error Message" = "Utilizatorul nu este inregistrat cu Facebook";
 "Enroll for Testing Title" = "Înrolare Testing";
 "Enroll for Staking Title" = "Înrolare Staking";
