--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -41,8 +41,8 @@
 "Wrong Old Password Error Message" = "Wrong old password";
 "Change Password Success Message" = "Password changed";
 "Login After Change Password Alert Message" = "Password changed. Tap OK to Login";
-"No Cammera Title Alert" = "No Cammera Access";
-"No Cammera Message Alert" = "Please enable the application to use the device's cammera in Settings.";
+"No Camera Title Alert" = "No Camera Access";
+"No Camera Message Alert" = "Please enable the application to use the device's camera in Settings.";
 "OK" = "OK";
 "Connect to the internet message" = "Please connect to the internet to continue!";
 "Loading message" = "Loading, please wait...";
