--- a/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
@@ -41,8 +41,8 @@
 "Wrong Old Password Error Message" = "Parola veche greșită";
 "Change Password Success Message" = "Parola schimbată";
 "Login After Change Password Alert Message" = "Parola schimbată. Apasă OK pentru Login";
-"No Cammera Title Alert" = "Camera inacesibilă";
-"No Cammera Message Alert" = "Permiteți aplicației sa folosească camera dispozitivului.";
+"No Camera Title Alert" = "Camera inacesibilă";
+"No Camera Message Alert" = "Permiteți aplicației sa folosească camera dispozitivului.";
 "OK" = "OK";
 "Connect to the internet message" = "Conectați-vă la internet pentru a continua!";
 "Loading message" = "Încarcă, așteptați...";
