remove ! from alert message

--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -90,7 +90,7 @@
 "Legal To Individual Downgrade Forbiden Message." = "This change is not possible at the moment.";
 "Add corporate details toast message" = "Please add corporate details";
 "Add Company Alert Title" = "Missing corporate details";
-"Add Company Alert Body" = "Tap on Add to register your company!";
+"Add Company Alert Body" = "Tap on Add to register your company";
 "Add" = "Add";
 "Company Not Validated Message" = "Please wait for your company to get validated before acquiring tokens";
 "Delete Account Confirm Message" = "Are you sure you want to delete this account?";
