adding localization for company states

--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -122,6 +122,14 @@
 "Providers Dashboard Text" = "Mauris nec placerat massa. Nunc sed ante vitae urna faucibus congue id id ex. Pellentesque eu elit ac est bibendum sagittis. Lorem ipsum dolor sit amet, consectetur adipiscing elit.";
 "Package Builder Text" = "Mauris nec placerat massa. Nunc sed ante vitae urna faucibus congue id id ex. Pellentesque eu elit ac est bibendum sagittis. Lorem ipsum dolor sit amet, consectetur adipiscing elit.";
 
+//Company States
+"Your corporate data is being reviewed" = "Your corporate data is being reviewed";
+"Your data is incomplete" = "Your data is incomplete";
+"Your data has been rejected" = "Your data has been rejected";
+"Your data has been reviewed" = "Your data has been reviewed";
+"Your data is ready to submit" = "Your data is ready to submit";
+"Your status is unknown, contact support" = "Your status is unknown, contact support";
+"Submit your corporate details" = "Submit your corporate details";
 
 
 
