Implement roles API, display user type and determine if it's company or individual

--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -131,6 +131,11 @@
 "Your status is unknown, contact support" = "Your status is unknown, contact support";
 "Submit your corporate details" = "Submit your corporate details";
 
+//User Info texts
+"Member" = "Member";
+"Requester" = "Requester";
+"Provider" = "Provider";
+"Requester and Provider" = "Requester and Provider";
 
 
 
