--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -88,8 +88,8 @@
 "Missing Certificate Message" = "Please upload the incorporation certificate to continue";
 "Get Company Details Error Message" = "Company details not available at the moment. Please try again later.";
 "Company To Individual Downgrade Forbiden Message." = "This change is not possible at the moment.";
-"Add corporate details toast message" = "Please add corporate details";
-"Add Company Alert Title" = "Missing corporate details";
+"Add corporate details toast message" = "Please add company details";
+"Add Company Alert Title" = "Missing company details";
 "Add Company Alert Body" = "Tap on Add to register your company";
 "Add" = "Add";
 "Company Not Validated Message" = "Please wait for your company to get validated before acquiring tokens";
@@ -129,7 +129,7 @@
 "Your data has been reviewed" = "Your data has been reviewed";
 "Your data is ready to submit" = "Your data is ready to submit";
 "Your status is unknown, contact support" = "Your status is unknown, contact support";
-"Submit your corporate details" = "Submit your corporate details";
+"Submit your corporate details" = "Submit your company details";
 
 //User Info texts
 "Member" = "Member";
