Update webview urls to hide "Before you rent proxies, you need to Sign in" notification and footer and update T&C from Register

--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -95,6 +95,8 @@
 "Company Not Validated Message" = "Please wait for your company to get validated before acquiring tokens";
 "Delete Account Confirm Message" = "Are you sure you want to delete this account?";
 "Confirm" = "Confirm";
+"Terms of Use" = "TERMS OF USE";
+"Privacy Policy" = "PRIVACY POLICY";
 
 //Kyc Status
 "Unknown Status Text"    = "Unknown";
