--- a/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
@@ -95,6 +95,8 @@
 "Company Not Validated Message" = "Așteptatți vă rog validarea companiei";
 "Delete Account Confirm Message" = "Sigur doriți să ștergeți cpntul?";
 "Confirm" = "Confirmă";
+"Terms of Use" = "TERMS OF USE";
+"Privacy Policy" = "PRIVACY POLICY";
 
 //Kyc Status
 "Unknown Status Text"    = "Necunoscut";
