configure Marketplace cell with real data, fix UI issues & add assets for grouped offers

--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -97,6 +97,7 @@
 "Confirm" = "Confirm";
 "Terms of Use" = "TERMS OF USE";
 "Privacy Policy" = "PRIVACY POLICY";
+"Grouped offer" = "Grouped offer";
 
 //Kyc Status
 "Unknown Status Text"    = "Unknown";
