--- a/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
@@ -97,6 +97,7 @@
 "Confirm" = "Confirmă";
 "Terms of Use" = "TERMS OF USE";
 "Privacy Policy" = "PRIVACY POLICY";
+"Grouped offer" = "Ofertă grupată";
 
 //Kyc Status
 "Unknown Status Text"    = "Necunoscut";
