add custom error handling for place order-ip not supported

--- a/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
@@ -98,6 +98,7 @@
 "Terms of Use" = "TERMS OF USE";
 "Privacy Policy" = "PRIVACY POLICY";
 "Grouped offer" = "Ofertă grupată";
+"IP Not Supported Error Message" = "Adresa IP nu este suportata";
 
 //Kyc Status
 "Unknown Status Text"    = "Necunoscut";
