--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -98,6 +98,7 @@
 "Terms of Use" = "TERMS OF USE";
 "Privacy Policy" = "PRIVACY POLICY";
 "Grouped offer" = "Grouped offer";
+"IP Not Supported Error Message" = "Your current IP address is not supported";
 
 //Kyc Status
 "Unknown Status Text"    = "Unknown";
