Move Become a provider logic to profile

--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -111,7 +111,7 @@
 "Accepted Status Text"   = "Accepted";
 
 //Provider texts
-"Ready to become a Provider" = "Ready to become a Provider";
+"Ready to become a Provider" = "Ready to become a Provider?";
 "About you as Provider" = "About you as Provider";
 "Provider Not Submitted Text" = "You will need to follow a few more steps";
 "Provider Pending Text" = "Your petition is being reviewed";
