display orders in Dashboard (most of the details), update flags (remove RO flag), create new model for Summary details

--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -99,6 +99,7 @@
 "Privacy Policy" = "PRIVACY POLICY";
 "Grouped offer" = "Grouped offer";
 "IP Not Supported Error Message" = "Your current IP address is not supported";
+"Order" = "Order";
 
 //Kyc Status
 "Unknown Status Text"    = "Unknown";
