--- a/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
@@ -98,7 +98,8 @@
 "Terms of Use" = "TERMS OF USE";
 "Privacy Policy" = "PRIVACY POLICY";
 "Grouped offer" = "Ofertă grupată";
-"IP Not Supported Error Message" = "Adresa IP nu este suportata";
+"IP Not Supported Error Message" = "Adresa IP nu este suportată";
+"Order" = "Comanda";
 
 //Kyc Status
 "Unknown Status Text"    = "Necunoscut";
