display alert message on market item details for not logged in users

--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -100,6 +100,9 @@
 "Grouped offer" = "Grouped offer";
 "IP Not Supported Error Message" = "Your current IP address is not supported";
 "Order" = "Order";
+"Sign In Message" = "Before you rent proxies, you need to Login";
+"ADD WALLET" = "ADD WALLET";
+"Add Wallet Message" = "You need to add your first IPSX Wallet in order to rent proxies.";
 
 //Kyc Status
 "Unknown Status Text"    = "Unknown";
