--- a/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
@@ -100,6 +100,9 @@
 "Grouped offer" = "Ofertă grupată";
 "IP Not Supported Error Message" = "Adresa IP nu este suportată";
 "Order" = "Comanda";
+"Sign In Message" = "Before you rent proxies, you need to Login"; //TODO -> translate
+"ADD WALLET" = "ADD WALLET"; //TODO -> translate
+"Add Wallet Message" = "You need to add your first IPSX Wallet in order to rent proxies."; //TODO -> translate
 
 //Kyc Status
 "Unknown Status Text"    = "Necunoscut";
