--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -103,6 +103,7 @@
 "Sign In Message" = "Before you rent proxies, you need to Login";
 "ADD WALLET" = "ADD WALLET";
 "Add Wallet Message" = "You need to add your first IPSX Wallet in order to rent proxies.";
+"Remove Unavailable Offers Alert" = "Please tap edit and remove all unavailable offers (greyed out)";
 
 //Kyc Status
 "Unknown Status Text"    = "Unknown";
