Fix Company flow

--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -139,6 +139,7 @@
 "Your data is ready to submit" = "Your data is ready to submit";
 "Your status is unknown, contact support" = "Your status is unknown, contact support";
 "Submit your corporate details" = "Submit your company details";
+"Company under review alert" = "The company can't be edited while it's under review.";
 
 //User Info texts
 "Member" = "Member";
