Forbid withdrawals if there is no ballance

--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -140,6 +140,7 @@
 "Your status is unknown, contact support" = "Your status is unknown, contact support";
 "Submit your corporate details" = "Submit your company details";
 "Company under review alert" = "The company can't be edited while it's under review.";
+"No tokens for withdraw alert message" = "You don't have enough IPSX tokens to perform a withdraw.";
 
 //User Info texts
 "Member" = "Member";
