Localise landing screen

--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -151,3 +151,8 @@
 "You" = "You";
 "Admin" = "Admin";
 
+//Landing Storyboard
+"Welcome to" = "Welcome to";
+"Register" = "Register";
+"Login" = "Login";
+"View or Marketplace" = "View or Marketplace";
