--- a/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
@@ -103,25 +103,56 @@
 "Sign In Message" = "Before you rent proxies, you need to Login"; //TODO -> translate
 "ADD WALLET" = "ADD WALLET"; //TODO -> translate
 "Add Wallet Message" = "You need to add your first IPSX Wallet in order to rent proxies."; //TODO -> translate
+"Remove Unavailable Offers Alert" = "Please tap edit and remove all unavailable offers (greyed out)";
 
 //Kyc Status
-"Unknown Status Text"    = "Necunoscut";
-"Registered Status Text" = "Înregistrat";
-"Approved Status Text"   = "Aprobat";
-"Pending Status Text"    = "În așteptare";
-"Incomplete Status Text" = "Incomplet";
-"Waiting Status Text"    = "În coadă";
-"Rejected Status Text"   = "Respins";
-"Accepted Status Text"   = "Acceptat";
+"Unknown Status Text"    = "Unknown";
+"Registered Status Text" = "Registered";
+"Approved Status Text"   = "Approved";
+"Pending Status Text"    = "Pending";
+"Incomplete Status Text" = "Incomplete";
+"Waiting Status Text"    = "Waiting";
+"Rejected Status Text"   = "Rejected";
+"Accepted Status Text"   = "Accepted";
 
 //Provider texts
-//TODO 
+"Ready to become a Provider" = "Ready to become a Provider?";
+"About you as Provider" = "About you as Provider";
+"Provider Not Submitted Text" = "You will need to follow a few more steps";
+"Provider Pending Text" = "Your petition is being reviewed";
+"Provider Approved Text" = "Your petition has been approved";
+"Provider Rejected Text" = "Your petition has been rejected";
+"Provider Canceled Text" = "Your petition has been canceled";
+"Provider Incomplete Text" = "You petition has incomplete data";
+"Your Job as Provider" = "Your Job as Provider";
+"Providers Dashboard" = "Providers Dashboard?";
+"Package Builder" = "Package Builder?";
+"Your Job as Provider Text" = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque in consectetur nunc. Aenean eu convallis eros, a semper felis. Duis eget eros vel tortor lobortis convallis at sed ante. Aliquam eget risus nibh.";
+"Providers Dashboard Text" = "Mauris nec placerat massa. Nunc sed ante vitae urna faucibus congue id id ex. Pellentesque eu elit ac est bibendum sagittis. Lorem ipsum dolor sit amet, consectetur adipiscing elit.";
+"Package Builder Text" = "Mauris nec placerat massa. Nunc sed ante vitae urna faucibus congue id id ex. Pellentesque eu elit ac est bibendum sagittis. Lorem ipsum dolor sit amet, consectetur adipiscing elit.";
 
 //Company States
-//TODO
+"Your corporate data is being reviewed" = "Your corporate data is being reviewed";
+"Your data is incomplete" = "Your data is incomplete";
+"Your data has been rejected" = "Your data has been rejected";
+"Your data has been reviewed" = "Your data has been reviewed";
+"Your data is ready to submit" = "Your data is ready to submit";
+"Your status is unknown, contact support" = "Your status is unknown, contact support";
+"Submit your corporate details" = "Submit your company details";
+"Company under review alert" = "The company can't be edited while it's under review.";
+"No tokens for withdraw alert message" = "You don't have enough IPSX tokens to perform a withdraw.";
 
 //User Info texts
-//TODO
+"Member" = "Member";
+"Requester" = "Requester";
+"Provider" = "Provider";
+"Requester and Provider" = "Requester and Provider";
 
 "You" = "You";
 "Admin" = "Admin";
+
+//Landing Storyboard
+"Welcome to" = "Bine ați venit la";
+"Register" = "Înregistrare";
+"Login" = "Logare";
+"View or Marketplace" = "Vizualizare Marketplace";
