Localise login and search

--- a/IPSX/Common/Strings/en.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/en.lproj/Localizable.strings
@@ -156,3 +156,22 @@
 "Register" = "Register";
 "Login" = "Login";
 "View or Marketplace" = "View or Marketplace";
+
+//Serach Storyboard
+"Country" = "Country";
+"Search" = "Search";
+"Country..." = "Country...";
+"Save" = "Save";
+
+//Login storyboard
+"Close" = "Close";
+"Login with email or facebook" = "Login with email or facebook";
+"Login with Email" = "Login with Email";
+"Login with Facebook" = "Login with Facebook";
+"Email Address" = "Email Address";
+"Type a valid email address" = "Type a valid email address";
+"The email must be a valid address." = "The email must be a valid address.";
+"Password" = "Password";
+"Type your password" = "Type your password";
+"Password incorrect label text" = "At least 8 characters, one number, one uppercase character and one special character @$!%*?&";
+"Forgot Your Password?" = "Forgot Your Password?";
