--- a/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
+++ b/IPSX/Common/Strings/ro-RO.lproj/Localizable.strings
@@ -156,3 +156,22 @@
 "Register" = "Înregistrare";
 "Login" = "Logare";
 "View or Marketplace" = "Vizualizare Marketplace";
+
+//Serach Storyboard
+"Country" = "Țara";
+"Search" = "Caută";
+"Country..." = "Țara...";
+"Save" = "Salvează";
+
+//Login options storyboard
+"Close" = "Închide";
+"Login with email or facebook" = "Logare cu Email sau Facebook";
+"Login with Email" = "Logare cu Email";
+"Login with Facebook" = "Logare cu Facebook";
+"Email Address" = "Adresa de email";
+"Type a valid email address" = "Introduceți o adresă validă";
+"The email must be a valid address." = "Adresa trebuie să fie validă.";
+"Password" = "Parola";
+"Type your password" = "Introduceți parola";
+"Password incorrect label text" = "cel puțin 8 caractere, un număr, o majusculă și un caracter special @$!%*?&";
+"Forgot Your Password?" = "Ați uitat parola?";
